--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,11 +1,11 @@
 [bumpversion]
-current_version = 0.3.0
+current_version = 0.0.1
 commit = True
 tag = True
 tag_name = {new_version}
 sign_tags = True
 message = [{now:%Y-%m-%d}] Bump version: {current_version} → {new_version}
 
-[bumpversion:file:spamwatch/__init__.py]
+[bumpversion:file:aio_sw/__init__.py]
 
 [bumpversion:file:setup.py]
