--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -6,6 +6,5 @@ tag_name = {new_version}
 sign_tags = True
 message = [{now:%Y-%m-%d}] Bump version: {current_version} → {new_version}
 
-[bumpversion:file:aio_sw/__init__.py]
-
-[bumpversion:file:setup.py]
+[bumpversion:file:src/aio_spamwatch/__init__.py]
+[bumpversion:file:pyproject.toml]
